test/fail/page-name-used-as-var-bug.app
//Variable 'root' not defined

application test
  
  page root(){
    	input(root)
  }
  
  
